Completed tests for Customers.